--- a/hw1/HW1_MNIST.ipynb
+++ b/hw1/HW1_MNIST.ipynb
@@ -1247,6 +1247,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The setting that improves most is adding the activation function. Decreasing learning rate can also improves a little bit. However, increasing hidden neurons seems improve little to the performance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
