--- a/hw2/HW2_2b.ipynb
+++ b/hw2/HW2_2b.ipynb
@@ -175,16 +175,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def next_batch(num, data, labels):\n",
+    "def next_batch(batch_size, data, labels):\n",
     "    idx = np.arange(0 , len(data))\n",
     "    np.random.shuffle(idx)\n",
-    "    idx = idx[:num]\n",
+    "    idx = idx[:batch_size]\n",
     "    data_shuffle = [data[i] for i in idx]\n",
     "    labels_shuffle = [labels[i] for i in idx]\n",
     "    data_shuffle = np.asarray(data_shuffle)\n",
     "    labels_shuffle = np.asarray(labels_shuffle)\n",
     "    labels_shuffle = np.squeeze(labels_shuffle)\n",
-    "    \n",
     "    return data_shuffle, labels_shuffle"
    ]
   },
